# trendsubs

./: .gitignore  README.md  pyproject.toml  start_trendsubs_gui.bat
src/trendsubs/: __init__.py  cli.py
src/trendsubs/core/: __init__.py  ass_builder.py  ffmpeg_runner.py  font_utils.py  models.py  presets.py  render_service.py  srt_parser.py  tenor_memes.py  word_jump_overlay.py  word_timing.py
src/trendsubs/gui/: __init__.py  app.py  window.py
tests/: test_ass_builder.py  test_cli.py  test_ffmpeg_runner.py  test_font_utils.py  test_gui.py  test_render_service.py  test_smoke_render.py  test_srt_parser.py  test_word_jump_overlay.py  test_word_timing.py
